<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charger"
    tools:context=".ui.fragments.AutosListFragment">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAutos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/auto_list_description" />


    <RelativeLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/background_section">

        <TextView
            android:id="@+id/tvNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_below="@id/tvNoInternet"
            android:backgroundTint="@color/background_page"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />
    </RelativeLayout>

</FrameLayout>