<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A31"
    tools:context=".ui.fragments.AutosDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="30dp"
                android:paddingBottom="10dp" >

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="@string/title" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:riv_corner_radius="10dp"
                    tools:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvBrand"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/brandD" />

                    <TextView
                        android:id="@+id/tvBrandD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvModel"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/modelD" />

                    <TextView
                        android:id="@+id/tvModelD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/versionD" />

                    <TextView
                        android:id="@+id/tvVersionD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPower"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/powerD" />

                    <TextView
                        android:id="@+id/tvPowerD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAcceleration"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/accelerationD" />

                    <TextView
                        android:id="@+id/tvAccelerationD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTopSpeed"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/topSpeedD" />

                    <TextView
                        android:id="@+id/tvTopSpeedD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDrivetrain"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/drivetrainD" />

                    <TextView
                        android:id="@+id/tvDrivetrainD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvEngine"
                        android:layout_width="230dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="18dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/titles"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/engineD" />

                    <TextView
                        android:id="@+id/tvEngineD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_weight="2"
                        tools:text="@string/text" />

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>